force-app/main/default/objects/Lead_Contact__c/Lead_Contact__c.object-meta.xml
<CustomObject>
    <label>Lead Contact</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>