force-app/main/default/objects/Lead_Contact__c/fields/Converted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact__c</fullName>
    <formula>IF( Converted__c, HYPERLINK(&quot;/lightning/r/Contact/&quot; +   Contact__r.Id  + &quot;/view&quot;, &quot;Go To Contact&quot;), &quot;Not Converted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Contact</label>
    <type>Text</type>
</CustomField>