force-app/main/default/objects/Lead_Contact__c/fields/Lead_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account__c</fullName>
    <label>Lead Account</label>
    <referenceTo>Lead_Account__c</referenceTo>
    <relationshipLabel>Lead Contact</relationshipLabel>
    <relationshipName>Lead_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>