force-app/main/default/objects/Lead_Contact__c/validationRules/Cannot_edit_converted_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_converted_record</fullName>
    <active>true</active>
    <description>Prevents de edition of a Lead Contact record if it has already been converted</description>
    <errorConditionFormula>IF(PRIORVALUE(Converted__c), true, false)</errorConditionFormula>
    <errorMessage>You cannot edit a converted record</errorMessage>
</ValidationRule>